tests/fixtures/invalid/bool_add_dict.py
# Cannot add Bool and Dict[str, int]
x: bool = True + {"a": 1}
